@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.openeuler</groupId>
         <artifactId>gmssl</artifactId>
-        <version>1.1.4</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>jsse</artifactId>
@@ -197,7 +197,6 @@
                             </excludes>
                             <argLine>
                                 --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                                --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
