@@ -5,9 +5,10 @@
     <parent>
         <groupId>org.openeuler</groupId>
         <artifactId>gmssl</artifactId>
-        <version>1.1.4</version>
+        <version>2.0.0</version>
     </parent>
 
+    <name>thirdparty-testing</name>
     <artifactId>thirdparty-testing</artifactId>
     <description>Use common Java third-party components for GMTLS testing</description>
 
@@ -24,6 +25,11 @@
         <dependency>
             <groupId>org.openeuler</groupId>
             <artifactId>bgmprovider</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openeuler</groupId>
+            <artifactId>sdfprovider</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
@@ -127,7 +133,6 @@
             <properties>
                 <surefire.argLine>
                     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                 </surefire.argLine>
             </properties>
         </profile>
